--- a/docs/architecture.mdx
+++ b/docs/architecture.mdx
@@ -1,15 +1,16 @@
 ---
-sidebar_position: 4
+pagination_next: null
+pagination_prev: null
 ---
 
-import architecture from '../../static/img/architecture.png';
+import architecture from "/img/architecture.png";
 
 # Architecture
 
 Welcome to the Resonate Architecture guide! This guide is designed to give you a deep dive into the internals of the Resonate server. By the end, you'll have a basic understanding of our three subsystems and the abstractions we have chosen.
 
 <center>
-<img src={architecture} alt="architecture" width="600" /> 
+  <img src={architecture} alt="architecture" width="600" />
 </center>
 
 Resonate consists of three subsystems:
