--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -7,6 +7,8 @@ sidebar_label: Home
 sidebar_position: 1
 pagination_next: null
 pagination_prev: null
+last_update:
+  date: "08-14-2024"
 ---
 
 import InputField from "@site/src/components/InputField/InputField";
@@ -25,4 +27,4 @@ Still evaluating and exploring? Ask Echo what the technology does.
 
 Want to know which configuration options are available for function executions? Ask Echo!
 
-If Echo doesn't know, we highly encourage you to **[join our Discord Server](https://discord.gg/rkRbrDsp)** and ask the community there!
+If Echo doesn't know, you're highly encouraged to **[join the Discord Community](https://discord.gg/rkRbrDsp)** and ask your question there!
