--- a/docs/evaluate-resonate.mdx
+++ b/docs/evaluate-resonate.mdx
@@ -1,6 +1,8 @@
 ---
 id: evaluate-resonate
+slug: /evaluate
 title: Why Resonate HQ?
+sidebar_label: Why Resonate HQ
 description: Evaluate Resonate for your distributed system.
 last_update:
   date: "08-14-2024"
@@ -12,7 +14,7 @@ Curious to know what Resonate can do for your cloud application?
 
 ### Resonate HQ provides Distributed Async Await
 
-Distributed Async Await is extends your traditional Async Await.
+Distributed Async Await extends your traditional Async Await.
 Traditional Aysnc Await enables concurrent execution on a single physical location using just functions and promises.
 Distributed Async Await provides the same level of concurrency, but for distributed locations, making it an incredibly effective cloud programming model.
 To make this possible Distributed Async Await's functions and promises are durable, meaning that it also provides Durable Execution.
