--- a/docs/get-started-typescript.mdx
+++ b/docs/get-started-typescript.mdx
@@ -1,7 +1,12 @@
 ---
-id: typescript-sdk
-title: Resonate HQ TypeScript SDK quickstart
-sidebar_label: TypeScript SDK quickstart
+id: get-started-typescript
+slug: /get-started/typescript
+title: Get started with the Resonate HQ TypeScript SDK
+sidebar_label: Get started with TypeScript SDK
+last_update:
+  date: "08-14-2024"
+pagination_next: null
+pagination_prev: null
 ---
 
 import pipeline from "/img/pipeline.png";
