--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -1,5 +1,6 @@
 ---
-id: getting-started
+id: get-started
+slug: /get-started
 title: Getting started with Resonate HQ
 sidebar_label: Getting started w/ Resonate
 last_update:
@@ -8,7 +9,7 @@ collapsible: false
 pagination_next: null
 pagination_prev: null
 tags:
-  - getting-started
+  - get-started
 ---
 
 How to get started using Resonate?
