--- a/docs/server-architecture.mdx
+++ b/docs/server-architecture.mdx
@@ -1,19 +1,22 @@
 ---
+id: server-architecture
+slug: /server/architecture
+title: Resonate HQ Server architecture
+sidebare_label: Server internal architecture
 pagination_next: null
 pagination_prev: null
 ---
 
-import architecture from "/img/architecture.png";
-
-# Architecture
-
 Welcome to the Resonate Architecture guide! This guide is designed to give you a deep dive into the internals of the Resonate server. By the end, you'll have a basic understanding of our three subsystems and the abstractions we have chosen.
+
+import architecture from "/img/architecture.png";
 
 <center>
   <img src={architecture} alt="architecture" width="600" />
 </center>
+;
 
-Resonate consists of three subsystems:
+The Resonate HQ server consists of three subsystems:
 
 - Kernel
 - API
