--- a/docs/evaluate/why-resonate-hq.mdx
+++ b/docs/evaluate/why-resonate-hq.mdx
@@ -1,13 +1,12 @@
 ---
-id: evaluate-resonate
-slug: /evaluate
+id: why-resonate-hq
 title: Why Resonate HQ?
 sidebar_label: Why Resonate HQ
 description: Evaluate Resonate for your distributed system.
 last_update:
-  date: "08-14-2024"
-pagination_next: null
-pagination_prev: null
+  date: "08-22-2024"
+tags:
+  - evaluate
 ---
 
 Curious to know what Resonate can do for your cloud application?
@@ -38,4 +37,6 @@ And if you do want to add that extra layer of durability to your application, th
 Resonate is designed to allow for incremental adoption without vendor lock-in.
 If you need to, you can convert just 1 function at a time.
 
-- **Built on an Open Standard**: Resonate's programming model is built on top of [durable promises](https://github.com/resonatehq/durable-promise-specification), an open standard with an intentionally minimal API surface area.
+### Resonate is built on an Open Standard
+
+Resonate's programming model is built on top of [durable promises](https://github.com/resonatehq/durable-promise-specification), an open standard with an intentionally minimal API surface area.
