--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -5,8 +5,6 @@ title: Resonate HQ Documentation
 description: Get started with Resonate HQ by asking Echo or digging into our docs.
 sidebar_label: Home
 sidebar_position: 1
-pagination_next: null
-pagination_prev: null
 last_update:
   date: "08-14-2024"
 ---
@@ -27,4 +25,4 @@ Still evaluating and exploring? Ask Echo what the technology does.
 
 Want to know which configuration options are available for function executions? Ask Echo!
 
-If Echo doesn't know, you're highly encouraged to **[join the Discord Community](https://discord.gg/rkRbrDsp)** and ask your question there!
+If Echo doesn't know, you're highly encouraged to **[join the Discord Community](https://resonatehq.io/discord)** and ask your question there!
