--- a/docs/operate/server-errors.mdx
+++ b/docs/operate/server-errors.mdx
@@ -1,9 +1,12 @@
 ---
-pagination_next: null
-pagination_prev: null
+id: server-errors
+title: Resonate HQ Server errors
+sidebar_label: Server errors
+description: "Troubleshoot Resonate HQ Server errors"
+tags:
+  - server-guidance
+  - errors
 ---
-
-# Error Codes
 
 This document lists all error codes that can be returned by our API.
 
