--- a/docs/get-started/index.mdx
+++ b/docs/get-started/index.mdx
@@ -1,37 +1,35 @@
 ---
-id: get-started
-slug: /get-started
-title: Getting started with Resonate HQ
+id: index
+title: Get started with Resonate HQ
 sidebar_label: Getting started w/ Resonate
 last_update:
   date: "08-14-2024"
 collapsible: false
-pagination_next: null
-pagination_prev: null
 tags:
   - get-started
 ---
 
-How to get started using Resonate?
+**How to get started using Resonate?**
 
 The answer can be a little bit use case specific, however generically you would follow these steps.
 
-### Choose your SDK
+### Step 1. Choose your SDK
 
-Resonate HQ currently has a TypeScript SDK and a Python SDK.
+Resonate HQ currently has a [TypeScript SDK](/develop/typescript) and a [Python SDK](/develop/python).
 
 However, the SDKs are currently at different stages of development and do not yet offer the same set of capabilities and features.
 
 You may consider which SDK to use based on your use case.
 
-### Install the SDK
+### Step 2. Install the SDK
 
 Next, install the SDK with your language's dependency manager.
 
-For TypeScript this would be `npm` or `yarn`.
-For Python this could be `pip`, `pipenv`, or `poetry` for example.
+For TypeScript this would be `npm` or `yarn`. See the [TypeScript SDK Guide](/develop/typescript#installation) for details.
 
-### Start building your application
+For Python this could be `pip`, `pipenv`, or `poetry` for example. See the [Python SDK repository](https://github.com/resonatehq/resonate-sdk-py) for details.
+
+### Step 3. Start building your application
 
 Generically speaking, to use a Resonate HQ SDK in your application you will do the following:
 
@@ -39,8 +37,20 @@ Generically speaking, to use a Resonate HQ SDK in your application you will do t
 2. Register the functions that you want to have Durable Promises.
 3. Start and run functions using the handle provided by the SDK.
 
+See the following SDK guides for details:
+
+- [TypeScript SDK Guide](/develop/typescript)
+- [Python SDK Guide](/develop/python)
+
 Just by using the SDK, your application will have access to automatic and configurable failure detection and mitigation through timeouts and retries as well as a few other features.
 
-### Connect to a Resonate HQ Server
+### Step 4. Connect to a Resonate HQ Server
 
 To make your promises and functions durable even in the face of complete hardware crashes, then start a Resonate Server and provide the connection URL to the handle provided by the SDK.
+
+See the [Install and run the Resonate HQ Server](/get-started/server-installation) guide for details.
+
+import DocCardList from "@theme/DocCardList";
+import { useCurrentSidebarCategory } from "@docusaurus/theme-common";
+
+<DocCardList items={useCurrentSidebarCategory().items} />
