--- a/docs/operate/server-architecture.mdx
+++ b/docs/operate/server-architecture.mdx
@@ -1,10 +1,13 @@
 ---
 id: server-architecture
-slug: /server/architecture
-title: Resonate HQ Server architecture
-sidebare_label: Server internal architecture
-pagination_next: null
-pagination_prev: null
+title: Server architecture
+sidebar_label: Server architecture
+description: Learn about the Resonate HQ server architecture and its subsystems.
+last_update:
+  date: "08-23-2024"
+tags:
+  - server-guidance
+  - architecture
 ---
 
 Welcome to the Resonate Architecture guide! This guide is designed to give you a deep dive into the internals of the Resonate server. By the end, you'll have a basic understanding of our three subsystems and the abstractions we have chosen.
@@ -14,7 +17,6 @@ import architecture from "/img/architecture.png";
 <center>
   <img src={architecture} alt="architecture" width="600" />
 </center>
-;
 
 The Resonate HQ server consists of three subsystems:
 
