--- a/docs/operate/server-observability.mdx
+++ b/docs/operate/server-observability.mdx
@@ -1,10 +1,15 @@
 ---
-sidebar_position: 3
+id: server-observability
+title: Resonate HQ Server observability
+sidebar_label: Server observability
+last_update:
+  date: "08-22-2024"
+tags:
+  - server-guidance
+  - observability
 ---
 
-# Observability
-
-Welcome to the Resonate Observability guide! Let's explore the big 3 of observability for the Resonate server:
+There are three areas of observability for the Resonate Server:
 
 ## Logs
 
