--- a/docs/operate/server-architecture.mdx
+++ b/docs/operate/server-architecture.mdx
@@ -1,18 +1,24 @@
 ---
-sidebar_position: 4
+id: server-architecture
+title: Server architecture
+sidebar_label: Server architecture
+description: Learn about the Resonate HQ server architecture and its subsystems.
+last_update:
+  date: "08-23-2024"
+tags:
+  - server-guidance
+  - architecture
 ---
-
-import architecture from '../../static/img/architecture.png';
-
-# Architecture
 
 Welcome to the Resonate Architecture guide! This guide is designed to give you a deep dive into the internals of the Resonate server. By the end, you'll have a basic understanding of our three subsystems and the abstractions we have chosen.
 
+import architecture from "/img/architecture.png";
+
 <center>
-<img src={architecture} alt="architecture" width="600" /> 
+  <img src={architecture} alt="architecture" width="600" />
 </center>
 
-Resonate consists of three subsystems:
+The Resonate HQ server consists of three subsystems:
 
 - Kernel
 - API
