--- a/docs/operate/server-kubernetes-deployment.mdx
+++ b/docs/operate/server-kubernetes-deployment.mdx
@@ -1,8 +1,14 @@
 ---
-sidebar_position: 2
+id: kubernetes-server-deployment
+title: Resonate HQ Server Kubernetes deployment
+sidebar_label: Kuberenetes deployment
+description: Discover how to deploy a Resonate HQ Server to Kubernetes
+last_update:
+  date: "08-19-2024"
+tags:
+  - server-guidance
+  - kubernetes
 ---
-
-# Deployment
 
 This page describes how to deploy Resonate on Kubernetes.
 
