fix missing file, frontmatter

--- a/docs/get-started/typescript-quickstart/index.mdx
+++ b/docs/get-started/typescript-quickstart/index.mdx
@@ -4,7 +4,18 @@ title: Resonate HQ TypeScript SDK quickstart tutorial
 description: Get started with the Resonate HQ TypeScript SDK by following this quickstart tutorial.
 sidebar_label: TypeScript SDK quickstart
 last_update:
-  date: "08-23-2024"
+  date: "08-27-2024"
+keywords:
+  - Resonate HQ TypeScript SDK
+  - Distributed Async Await tutorial
+  - Function retries Resonate
+  - Retry rate limits TypeScript
+  - Resonate HQ Server connection
+  - Platform-level failure recovery
+  - Resonate Application Node
+  - Promise inspection Resonate Server
+  - TypeScript quickstart tutorial
+  - Resonate HQ SDK quickstart
 tags:
   - typescript
   - sdk-guidance
@@ -18,6 +29,11 @@ This quickstart tutorial introduces you to the Resonate HQ TypeScript SDK.
 
 In [Part 1](/get-started/typescript-quickstart/part-1), you develop your first _Distributed Async Await_ application with the Resonate HQ SDK, a summarization service.
 This part illustrates features such as transparent function retries and retry rate limits, simply through the integration of the Resonate HQ SDK, without the need for any additional infrastructure.
+
+## Part 2
+
+In [Part 2](/get-started/typescript-quickstart/part-2), you connect your application to a Resonate HQ Server to enable recovery from platform-level failures.
+This part showcases how a Resonate Application Node can recover from hard crashes, and you will inspect the status of promises in the Resonate Server.
 
 import DocCardList from "@theme/DocCardList";
 import { useCurrentSidebarCategory } from "@docusaurus/theme-common";
