Adding typescript quickstart tutorial part 2 (#63)
* Adding typescript quickstart tutorial part 2

* fix missing file, frontmatter

--- a/docs/get-started/typescript-quickstart/part-1/index.mdx
+++ b/docs/get-started/typescript-quickstart/part-1/index.mdx
@@ -3,6 +3,8 @@ id: part-1
 sidebar_label: Part 1
 title: Resonate HQ TypeScript quickstart tutorial • Part 1 🏴‍☠️
 description: Build a reliable summarization service using the Resonate TypeScript SDK. This step-by-step tutorial demonstrates how to leverage Durable Execution to handle application-level failures with local promise storage, automatic retries, and transparent execution management.
+last_update:
+  date: "08-27-2024"
 keywords:
   - Resonate TypeScript SDK
   - Distributed async await
@@ -222,8 +224,6 @@ The Resonate TypeScript SDK stores that promise locally and ensures that if the 
 
 However, if you restart the service or provide a different url, the service will execute the functions again.
 
-<!--
 ## Up next
 
-In the next part of the tutorial, you will connect to a Resonate Server so that the promise is stored remoted, so that even if you restart the service the functions will not re-execute and you will get the result to the original function execution.
--->
+In the next part of the tutorial, you will connect to a Resonate Server which stores the promise remotely, so that even if your HTTP server crashes, the function executions will be able to eventually complete.
