adding Distributed Async Await to concepts

--- a/docs/concepts/application-node.mdx
+++ b/docs/concepts/application-node.mdx
@@ -2,6 +2,7 @@
 id: application-node
 title: What is a Resonate HQ Application Node?
 sidebar_label: Application Node
+sidebar_position: 3
 description: Resonate HQ Application Node definition
 last_update:
   date: "08-27-2024"
