--- a/docs/concepts/durable-promise.mdx
+++ b/docs/concepts/durable-promise.mdx
@@ -2,6 +2,7 @@
 id: durable-promise
 title: Durable Promises
 sidebar_label: Durable Promises
+sidebar_position: 2
 last_update:
   date: "08-23-2024"
 tags:
