--- a/docs/concepts/failure-detection-and-recovery.mdx
+++ b/docs/concepts/failure-detection-and-recovery.mdx
@@ -2,6 +2,7 @@
 id: failure-detection-and-recovery
 title: Failure detection and recovery
 sidebar_label: Failure detection and recovery
+sidebar_position: 4
 description: Learn how Resonate HQ detects and recovers from failures.
 last_update:
   date: "08-23-2024"
