--- a/docs/concepts/function-versioning.mdx
+++ b/docs/concepts/function-versioning.mdx
@@ -2,6 +2,7 @@
 id: function-versioning
 title: Function versioning
 sidebar_label: Function versioning
+sidebar_position: 5
 ---
 
 Function versioning is essential for creating durable promises. Idempotent functions can be safely retried without causing unintended side effects, enabling retry mechanisms to recover from transient issues. However, during retries, the function code must remain immutable to prevent versioning conflicts.
