--- a/docs/concepts/failure-detection-and-recovery.mdx
+++ b/docs/concepts/failure-detection-and-recovery.mdx
@@ -55,7 +55,7 @@ async function download(ctx: Context, url: string): Promise<string> {
 
 At the platform level, if a failure is detected, often the desired behavior is to start a new function execution on a different Application Node.
 
-However, thanks to Durable Processes, the new function execution effectively resumes from the point of failure instead of restarting from the beginning.
+However, thanks to Durable Promises, the new function execution effectively resumes from the point of failure instead of restarting from the beginning.
 
 ## Timeouts
 
