--- a/docs/get-started/typescript-quickstart/part-1/index.mdx
+++ b/docs/get-started/typescript-quickstart/part-1/index.mdx
@@ -4,7 +4,7 @@ sidebar_label: Part 1
 title: Resonate HQ TypeScript quickstart tutorial • Part 1 🏴‍☠️
 description: Build a reliable summarization service using the Resonate TypeScript SDK. This step-by-step tutorial demonstrates how to leverage Durable Execution to handle application-level failures with local promise storage, automatic retries, and transparent execution management.
 last_update:
-  date: "08-29-2024"
+  date: "09-04-2024"
 keywords:
   - Resonate TypeScript SDK
   - Distributed async await
@@ -32,9 +32,12 @@ You will create an HTTP service with a single route handler.
 The handler will use `resonate.run()` to run the `downloadAndSummarize()` function.
 Resonate will manage the execution of these functions, ensuring that the result of `download()` is passed as input to `summarize()`.
 
-![downloadAndSummarize application flow](/img/downloadAndSummarizeLocal.svg)
+In the following diagram, **f1** is `downloadAndSummarize()`, **f2** is `download()`, and **f3** is `summarize()`.
+Promises are represented by **p1**, **p2**, and **p3** respectively.
 
-In cases of transient or intermittent failures at any step, Resonate will automatically retry the execution, providing reliability to the process.
+![downloadAndSummarize application flow](/img/local-downloadAndSummarize.svg)
+
+If any of the functions throw an error or reject a promise, Resonate will automatically retry the function execution.
 
 ### Prerequisites
 
